# openchronicle-mcp

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  AUTOFIX.md  CLAUDE.md  CODEBASE_REFRESH_REPORT.md  CODEBASE_REFRESH_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTING_enhanced.md  DEVELOPER_SETUP.md  DEVELOPMENT_CONTINUATION.md  DEVELOPMENT_MASTER_PLAN.md  DIAGNOSE_ENHANCEMENT_SUMMARY.md  DOCUMENTATION_CONSOLIDATION_ANALYSIS.md  Dockerfile  FOCUSED_UTILITIES_FINAL.md  LICENSE-content.md  LICENSE.md  MOCK_ADAPTER_IMPLEMENTATION_SUMMARY.md  Makefile  Makefile_fixed.ps1  PHASE_2_INFRASTRUCTURE_COMPLETE.md  PHASE_3_INTERFACES_COMPLETE.md  PHASE_4_MIGRATION_PLAN.md  PHASE_5A_COMPLETE.md  PRIVACY.md  PROJECT_WORKFLOW_OVERVIEW.md  Phase_2_3_Character_Orchestrator_Completion.md  QUALITY_CONSOLIDATION_PLAN.md  README.md  REFACTORING_MASTER_PLAN.md  SECURITY.md  SIMPLIFIED_REFACTORING_APPROACH.md  STATUS.md  TERMS.md  TESTING_STRATEGY.md  TEST_COVERAGE_EMERGENCY_PLAN.md  (+52 more)
.continue/: config.json
.copilot/: ARCHITECTURE_AUDIT_2025_08_09.md  ARCHITECTURE_AUDIT_COMPREHENSIVE_2025_08_09.md  ARCHITECTURE_FILENAME_RESOLUTION.md  CHANGELOG.md  CLI_INTEGRATION_COMPLETE.md  CLI_REORGANIZATION_COMPLETE.md  FINAL_HEXAGONAL_ARCHITECTURE_STATUS.md  HEXAGONAL_ARCHITECTURE_FIXES_COMPLETED.md  PHASE_1_COMPLETE.md  PHASE_3_COMPLETION_SUMMARY.md  PYTHONIC_ARCHITECTURE_SOLUTION.md  README.md  additional.goals.json  additional.goals.priority.override.json  cli_architecture_restructuring.md  consistency_review_20250717.md  consolidation_complete.md  context.json  context_complete.json  context_storypacks.json  context_suggestions.md  core_logic_phase1_plan.md  development_alignment_checklist.md  emotional_config_schema.md  next_priority_full_text_search.md  phase1_completion_report.md  phase2_configuration_completion.md  phase2_objectives.md  phase_3_day_3_performance_monitor_complete.md  phase_4_1_complete.md  project_status.json  storypack_importer.md  storypack_structure_guide.md  utilities_consolidation_plan.md
.githooks/: check-identity-and-pii.sh  install-hooks.sh  post-commit
.github/: DEVELOPMENT_STATUS.md  MODULE_STATUS.md  TASK_REGISTRY.md  copilot-instructions.md  dependabot.yml
analysis/: CRITICAL_PROTOTYPE_ANALYSIS.md  QUALITY_CONSOLIDATION_PLAN.md  TEMPLATE_RESEARCH_ANALYSIS.md  legacy_cleanup_plan.md  next_phase_roadmap.md  phase_1_week_3_completion_report.md  phase_1_week_4_completion_report.md  phase_2_week_11_12_interface_segregation_completion_report.md  phase_2_week_9-10_security_hardening_completion_report.md  phase_5a_analyzer.py  phase_5a_component_specs.py  phase_5a_day1_analysis.py  phase_5a_day1_completion_report.md  phase_6_day_4_5_completion_report.md  phase_7b_completion_report.md  phase_8a_day3_completion_report.md  test_coverage_detailed_results.json
cli/: main.py
config/: cli_config.json  core.json.example  model_registry.json  models.json  registry_settings.json  system_config.json  user_preferences.json
core/: __init__.py  bookmark_manager.py  character_consistency_engine.py  character_interaction_engine.py  content_analyzer.py  context_builder.py  main.py  memory_manager.py  model_adapter.py  rollback_engine.py  scene_logger.py  story_loader.py  timeline_builder.py
data/: openchronicle.db  openchronicle_core.db
docs/: ARCHITECTURE.md  BACKLOG.md  CODEBASE_ASSESSMENT.md  MIGRATION_PROGRESS_BOARD.md  V3_PLAN.md  cutover-2026-05-06-triage.md  narrative_systems_architecture.md
documentation_archive_20250805_150430/: COMPREHENSIVE_TEMPLATE_ANALYSIS.md  NEXT_STEPS_20050805.md  REFACTORING_MASTER_PLAN.md  STORYPACK_IMPORT_DEVELOPMENT_PLAN.md  phase_4_2_complete.md  phase_4_character_analysis.md  phase_6_completion_report.md
examples/: di_timeline_migration.py
extensions/: __init__.py
import/: README.md
legacy_backup_phase6/: memory_consistency_engine.py
legacy_backup_phase7a/: context_builder.py  test_context_builder.py
openchronicle-core/: mypy.ini  pyproject.toml
scripts/: check-hexagonal-boundaries.ps1  check-import-structure.ps1  create_registry_adapter.py  import_analysis.py  migrate_v2_to_v3.py  performance_baseline.py  phase1_health_check.py  smoke_test.py  validate_environment.py  (+1 more)
(+1489 files in other folders)
