[build-system]
# Floors picked to dodge known CVEs flagged by pip-audit on the base
# python:3.11-slim image (setuptools PYSEC-2025-49 + CVE-2024-6345,
# wheel CVE-2026-24049). The Dockerfile also upgrades pip/setuptools/
# wheel ahead of the package install for the same reason.
requires = ["setuptools>=78.1.1", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "openchronicle-mcp"
version = "3.0.0.dev0"
description = "Memory database for LLM agents — persistent semantic + keyword memory, project namespacing, served over HTTP REST and MCP."
authors = [{name = "CarlDog", email = "carldog@users.noreply.github.com"}]
maintainers = [{name = "CarlDog", email = "carldog@users.noreply.github.com"}]
license = {text = "AGPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["llm", "ai", "memory", "mcp", "embeddings", "fts5", "sqlite"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU Affero General Public License v3",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"Typing :: Typed",
]
dependencies = [
	"fastapi>=0.110.0",
	"uvicorn[standard]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/CarlDog/openchronicle-mcp"
Repository = "https://github.com/CarlDog/openchronicle-mcp"
Issues = "https://github.com/CarlDog/openchronicle-mcp/issues"
Documentation = "https://github.com/CarlDog/openchronicle-mcp/tree/main/docs"

[project.optional-dependencies]
# Embedding-provider extras. v2's anthropic/groq/gemini/discord
# extras are gone — v3 has no LLM, no Discord. OpenAI and Ollama
# survive solely as embedding providers. numpy is shared across the
# embedding extras because EmbeddingService.search_hybrid uses it for
# vectorized cosine similarity on the read path.
openai = [
	"openai>=1.0.0",
	"numpy>=1.24",
]
ollama = [
	"httpx>=0.25.0",
	"numpy>=1.24",
]
mcp = [
	"mcp>=1.0.0",
]
dev = [
	"pytest>=7",
	"pytest-asyncio>=0.23",
	"mypy>=1.8",
	"ruff>=0.1.0",
	"openai>=1.0.0",
	"httpx>=0.25.0",
	"mcp>=1.0.0",
	"numpy>=1.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
	"integration: mark test as an integration test that requires env vars to run",
]

[project.scripts]
oc = "openchronicle.interfaces.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openchronicle = ["**/*.sql"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    # "TCH",  # flake8-type-checking (disabled for cleaner code)
]
ignore = [
    "E501",   # line too long (handled by formatter)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["B", "SIM"]  # Less strict for tests

[tool.ruff.lint.isort]
known-first-party = ["openchronicle"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.helpers"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true
